FullQa New/src/objects/DRT_Metrics__c.object
<CustomObject>
    <description>The purpose of this object is to capture metrics data for the developer relations team.  The primary information is from Google Analytics uploaded monthly</description>
    <fields>
        <fullName>DevAv_Ave_Visit_Duration__c</fullName>
        <description>The average time duration of a session.</description>
        <inlineHelpText>The average time duration of a session.</inlineHelpText>
        <label>DevAv Ave Visit Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevAv_Bounce_Rate__c</fullName>
        <description>Bounce Rate is the percentage of single-page visits (i.e. visits in which the person left your site from the entrance page.</description>
        <inlineHelpText>Bounce Rate is the percentage of single-page visits (i.e. visits in which the person left your site from the entrance page.</inlineHelpText>
        <label>DevAv Bounce Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DevAv_Month__c</fullName>
        <description>Month of reporting</description>
        <inlineHelpText>Month of reporting</inlineHelpText>
        <label>DevAv Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevAv_New_Visits__c</fullName>
        <description>An estimate of the percentage of first time visits from developer.avalara.com</description>
        <inlineHelpText>An estimate of the percentage of first time visits from developer.avalara.com</inlineHelpText>
        <label>DevAv % New Visits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DevAv_Page_Views__c</fullName>
        <description>Pageviews is the total number of pages viewed. Repeated views of a single page are counted.</description>
        <inlineHelpText>Pageviews is the total number of pages viewed. Repeated views of a single page are counted.</inlineHelpText>
        <label>DevAv Page Views</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevAv_Pages_Visit__c</fullName>
        <description>Pages/Visit (Average Page Depth) is the average number of pages viewed during a visit to your site. Repeated views of a single page are counted.</description>
        <inlineHelpText>Pages/Visit (Average Page Depth) is the average number of pages viewed during a visit to your site. Repeated views of a single page are counted.</inlineHelpText>
        <label>DevAv Pages / Visit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevAv_Total_Visits__c</fullName>
        <description>The number of visits to your site. For more information, see How Visits are Calculated in Analytics. If you&apos;re creating a visitor segment for a remarketing list, then this is the number of visits to your site over the previous seven days.</description>
        <inlineHelpText>The number of visits to your site. For more information, see How Visits are Calculated in Analytics. If you&apos;re creating a visitor segment for a remarketing list, then this is the number of visits to your site over the previous seven days.</inlineHelpText>
        <label>DevAv Total Visits</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevAv_Unique_Visits__c</fullName>
        <description>Unique Visitors is the number of unduplicated (counted only once) visitors to your website over the course of a specified time period.</description>
        <inlineHelpText>Unique Visitors is the number of unduplicated (counted only once) visitors to your website over the course of a specified time period.</inlineHelpText>
        <label>DevAv Unique Visits</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DevAv_of_SDKs_Downloaded__c</fullName>
        <description>Total count of number of SDKs downloaded via web</description>
        <inlineHelpText>Total count of number of SDKs downloaded via web</inlineHelpText>
        <label>DevAv # of SDKs Downloaded</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Devav_Returning_Visitor__c</fullName>
        <description>from developer.avalara.com</description>
        <inlineHelpText>from developer.avalara.com</inlineHelpText>
        <label>Devav % Returning Visitor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>DRT Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DevAv_of_SDKs_Downloaded__c</columns>
        <columns>DevAv_New_Visits__c</columns>
        <columns>Devav_Returning_Visitor__c</columns>
        <columns>DevAv_Ave_Visit_Duration__c</columns>
        <columns>DevAv_Bounce_Rate__c</columns>
        <columns>DevAv_Month__c</columns>
        <columns>DevAv_Pages_Visit__c</columns>
        <columns>DevAv_Page_Views__c</columns>
        <columns>DevAv_Total_Visits__c</columns>
        <columns>DevAv_Unique_Visits__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DRT Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRT Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>